@@ -951,6 +951,10 @@ StartUp(Bool defaultScreenOnly)
 	wScreenCount++;
     }
 
+#ifndef LITE
+    InitializeSwitchMenu();
+#endif
+
     /* initialize/restore state for the screens */
     for (j = 0; j < wScreenCount; j++) {
         int crashed;
